Update signature
