# pkg/api/api.swagger.go
@@ -781,9 +781,9 @@ func SwaggerJsonTemplate() string {
 		"      \"type\": \"object\",\n" +
 		"      \"title\": \"swagger:model\",\n" +
 		"      \"properties\": {\n" +
-		"        \"reprioritizedIds\": {\n" +
-		"          \"type\": \"array\",\n" +
-		"          \"items\": {\n" +
+		"        \"reprioritizationErrors\": {\n" +
+		"          \"type\": \"object\",\n" +
+		"          \"additionalProperties\": {\n" +
 		"            \"type\": \"string\"\n" +
 		"          }\n" +
 		"        }\n" +
